[package]
name = "rust_explore_printpdf_two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.6.0"

[[example]]
name = "page"
required-features = []

[[example]]
name = "image"
required-features = ["embedded_images"]
